<resources>
    <string name="app_name">玩Android</string>
    <string name="me">我</string>
    <string name="menu_main">首页</string>
    <string name="menu_project">项目</string>
    <string name="menu_system">体系</string>
    <string name="menu_wechat">公众号</string>
    <string name="coin">积分:%1$d</string>
    <string name="coin_null">积分:(登录后可见)</string>
    <string name="rank">排名:%1$d</string>
    <string name="rank_null">排名:(登录后可见)</string>
    <string name="drawer_coin">积分</string>
    <string name="ranking_coin">积分榜</string>
    <string name="menu_navigation">导航</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_todo">TODO</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_mode_night">夜间模式</string>
    <string name="drawer_mode_day">日间模式</string>
    <string name="drawer_aboutUs">关于我们</string>
    <string name="drawer_sign_out">退出登录</string>
    <string name="login">登录</string>
    <string name="registered">注册</string>
    <string name="login_name">用户名</string>
    <string name="login_pw">密码</string>
    <string name="login_pw_sure">确认密码</string>
    <string name="no_num">还没有账号？去注册</string>
    <string name="is_num">已有账号？去登录</string>
    <string name="remember">记住用户名和密码</string>
    <string name="tip">提示</string>
    <string name="sign_out_sure">您确定退出登录吗?</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="tip_info">请将信息填写完整</string>
    <string name="tip_num_6">账号最少为6位数</string>
    <string name="tip_pw_6">密码最少为6位数</string>
    <string name="tip_pw_error">密码输入不正确</string>
    <string name="login_success">登录成功</string>
    <string name="registered_success">注册成功</string>
    <string name="sign_out_success">您已退出登录</string>
    <string name="login_un">请先登录</string>
    <string name="choose_language">选择语言</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="no_wifi_load">开启后在非Wifi环境下不加载图片</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/wangzailfm/wanandroidclient" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="hot_search">大家都在搜</string>
    <string name="saerch_hint">搜索...</string>
    <string name="todo_add">新增</string>
    <string name="todo_modify">修改</string>
    <string name="todo_title">标题:</string>
    <string name="todo_need">必填</string>
    <string name="todo_content">内容:</string>
    <string name="todo_priority">优先级:</string>
    <string name="todo_general">一般</string>
    <string name="todo_important">重要</string>
    <string name="todo_date">日期:</string>
    <string name="todo_save">保存</string>
    <string name="todo_save_success">保存成功</string>
    <string name="undone">未完成</string>
    <string name="completed">已完成</string>
    <string name="mark_as_completed">标记为已完成</string>
    <string name="mark_as_incomplete">标记为未完成</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="topping">置顶</string>
    <string name="new_">新</string>
    <string name="search_place">在此公众号内搜索</string>
    <string name="loading">加载中...</string>
    <string name="collect_sure">确定取消收藏吗？</string>
    <string name="cancel_success">取消成功</string>
    <string name="collect_success">收藏成功</string>
    <string name="exit">再按一次退出应用</string>
    <string name="collection_article">文章</string>
    <string name="collection_website">网站</string>
    <string name="website_name">网站名称</string>
    <string name="copy_url">复制网址</string>
    <string name="open_url">通过浏览器打开</string>
    <string name="copy_success">复制成功</string>
    <string name="url">网址:</string>
    <string name="url_tip">请以http://或https://开头</string>
    <string name="url_sub_tip">请正确填写网址</string>
</resources>
