<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_todo_tip">

    <TextView
        android:id="@+id/tvOpen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/open_url"
        android:textColor="@color/color_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_6"
        app:layout_constraintTop_toBottomOf="@id/tvOpen" />

    <TextView
        android:id="@+id/tvCopy"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/copy_url"
        android:textColor="@color/color_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_6"
        app:layout_constraintTop_toBottomOf="@id/tvCopy" />

    <TextView
        android:id="@+id/tvModify"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/todo_modify"
        android:textColor="@color/color_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_6"
        app:layout_constraintTop_toBottomOf="@id/tvModify" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/delete"
        android:textColor="@color/color_3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />


</androidx.constraintlayout.widget.ConstraintLayout>
