<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AddTodoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back"
            app:title="@string/todo_add"
            app:titleTextColor="@color/title_white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/todo_title"
            android:textColor="@color/color_3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@null"
            android:hint="@string/todo_need"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="Autofill,TextFields" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="#666666"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/todo_content"
            android:textColor="@color/color_3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <EditText
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/todo_need"
            android:minHeight="120dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/content"
            app:layout_constraintTop_toBottomOf="@id/view1"
            tools:ignore="Autofill,TextFields" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="#666666"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/todo_priority"
            android:textColor="@color/color_3"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/priority"
            app:layout_constraintTop_toBottomOf="@id/view2">

            <RadioButton
                android:id="@+id/tvGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/color_blue"
                android:checked="true"
                android:text="@string/todo_general"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/tvImportant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/color_blue"
                android:text="@string/todo_important"
                android:textSize="16sp" />

        </RadioGroup>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="#666666"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/todo_date"
            android:textColor="@color/color_3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@null"
            android:textColor="@color/color_3"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/ivNext"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/view3" />

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@id/tvDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvDate"
            app:srcCompat="@drawable/ic_arrow_down"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="#666666"
            app:layout_constraintTop_toBottomOf="@id/tvDate" />

        <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_button"
            android:gravity="center"
            android:text="@string/todo_save"
            android:textColor="@color/title_white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/view4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>